--- a/index.html
+++ b/index.html
@@ -33,23 +33,44 @@
 <button type="button">Order Service</button>
 </section>
          <!--Services-->
-<section>
-    <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-    <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-    <h3>Diligence</h3>
-    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-    <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-</section>
+         <section>
+            <h2>Our Services</h2>
+            <article>
+              <h3>Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </article>
+            <article>
+              <h3>Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </article>
+            <article>
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </article>
+            <article>
+              <h3>Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </article>
+          </section>
          <!--Our team-->
 <section>
     <h2>Our Team</h2>
     <ul>
         <li>
           <img
-            src="images/1.jpg"
+            src="images/1 (1).jpg"
             width="264"
             height="260"
             alt="Mark Guerrero-Product Designer"
@@ -59,7 +80,7 @@
           </li>
         <li>
           <img
-            src="images/2.jpg"
+            src="images/2 (1).jpg"
             width="264"
             height="260"
             alt="Tom Ford-Frontend Developer"
@@ -69,7 +90,7 @@
         </li>
         <li>
           <img
-            src="images/3.jpg"
+            src="images/3 (1).jpg"
             width="264"
             height="260"
             alt="Camila Garcia Marketing"
@@ -79,7 +100,7 @@
         </li>
         <li>
             <img
-            src="images/4.jpg"
+            src="images/4 (1).jpg"
             width="264"
             height="260"
             alt="Daniel Wilson UI Designer"
