--- a/index.html
+++ b/index.html
@@ -6,113 +6,114 @@
     <title>Document</title>
   </head>
   <body>
+    >
     <header>
-      <a href=""
-        ><header>
-          <a href="">WebStudio</a>
-          <!--check this part-->
-          <nav>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-              </ul>
-            <address>
-              <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-              </ul>
-            </address>
-          </nav>
-        </header>
-       
+      <a href="">WebStudio</a>
+      <!--check this part-->
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
     <main>
-        <!--Назва, кнопка-->
-        <section> 
-<h1>Effective Solutions for Your Business</h1>
-<button type="button">Order Service</button>
-</section>
-         <!--Services-->
-         <section>
-            <h2>Our Services</h2>
-            <article>
-              <h3>Strategy</h3>
-              <p>
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
-              </p>
-            </article>
-            <article>
-              <h3>Punctuality</h3>
-              <p>
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </article>
-            <article>
-              <h3>Diligence</h3>
-              <p>
-                Research and confirm brands with the strongest digital growth
-                opportunities and minimize risk.
-              </p>
-            </article>
-            <article>
-              <h3>Technologies</h3>
-              <p>
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </article>
-          </section>
-         <!--Our team-->
-<section>
-    <h2>Our Team</h2>
-    <ul>
-        <li>
-          <img
-            src="images/1 (1).jpg"
-            width="264"
-            height="260"
-            alt="Mark Guerrero-Product Designer"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-          </li>
-        <li>
-          <img
-            src="images/2 (1).jpg"
-            width="264"
-            height="260"
-            alt="Tom Ford-Frontend Developer"
-          />
-          <h3>Tom Ford</h3>
-      <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="images/3 (1).jpg"
-            width="264"
-            height="260"
-            alt="Camila Garcia Marketing"
-          />
-          <h3>Camila Garcia</h3>
-      <p>Marketing</p>
-        </li>
-        <li>
+      <!--Назва, кнопка-->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!--Services-->
+      <section>
+        <article>
+          <h2>Strategy</h2>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </article>
+        <article>
+          <h2>Punctuality</h2>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </article>
+        <article>
+          <h2>Diligence</h2>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </article>
+        <article>
+          <h2>Technologies</h2>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </article>
+      </section>
+      <!--Our team-->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
             <img
-            src="images/4 (1).jpg"
-            width="264"
-            height="260"
-            alt="Daniel Wilson UI Designer"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-</section>
+              src="images/1.jpg"
+              width="264"
+              height="260"
+              alt="Mark Guerrero-Product Designer"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="images/2.jpg"
+              width="264"
+              height="260"
+              alt="Tom Ford-Frontend Developer"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="images/3.jpg"
+              width="264"
+              height="260"
+              alt="Camila Garcia Marketing"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/4.jpg"
+              width="264"
+              height="260"
+              alt="Daniel Wilson UI Designer"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <h2>WebStudio</h2>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
