--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    >
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <!--check this part-->
       <nav>
         <ul>
@@ -32,34 +31,46 @@
       </section>
       <!--Services-->
       <section>
-        <article>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </article>
-        <article>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </article>
-        <article>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </article>
-        <article>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </article>
+        <h2>Our Services</h2>
+
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <br />
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+            <br />
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <br />
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+            <br />
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <br />
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+            <br />
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <br />
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+            <br />
+          </li>
+        </ul>
       </section>
       <!--Our team-->
       <section>
@@ -67,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="images/1.jpg"
+              src="images/Mark-Guerrero.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero-Product Designer"
@@ -77,7 +88,7 @@
           </li>
           <li>
             <img
-              src="images/2.jpg"
+              src="images/Tom-Ford.jpg"
               width="264"
               height="260"
               alt="Tom Ford-Frontend Developer"
@@ -87,7 +98,7 @@
           </li>
           <li>
             <img
-              src="images/3.jpg"
+              src="images/Camila-Garcia.jpg"
               width="264"
               height="260"
               alt="Camila Garcia Marketing"
@@ -97,7 +108,7 @@
           </li>
           <li>
             <img
-              src="images/4.jpg"
+              src="images/Daniel-Wilson.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson UI Designer"
@@ -109,7 +120,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
