--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!--Heder-->
     <header>
-      <a href="./index.html">WebStudio</a>
-      <!--check this part-->
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
