--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="images/Mark-Guerrero.jpg"
+              src="./images/Mark-Guerrero.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero-Product Designer"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="images/Tom-Ford.jpg"
+              src="./images/Tom-Ford.jpg"
               width="264"
               height="260"
               alt="Tom Ford-Frontend Developer"
@@ -98,7 +98,7 @@
           </li>
           <li>
             <img
-              src="images/Camila-Garcia.jpg"
+              src="./images/Camila-Garcia.jpg"
               width="264"
               height="260"
               alt="Camila Garcia Marketing"
@@ -108,7 +108,7 @@
           </li>
           <li>
             <img
-              src="images/Daniel-Wilson.jpg"
+              src="/images/Daniel-Wilson.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson UI Designer"
