--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </li>
           <li>
             <img
-              src="/images/Daniel-Wilson.jpg"
+              src="./images/Daniel-Wilson.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson UI Designer"
